fix(minecraft): migrate custom loot codecs